# see-code

./: README.md  docker-compose.yml  test.py
backend/: Dockerfile  README.md  create_tables.py  install_cli.py  pyproject.toml  requirements.txt  test_system.py
backend/app/: main.py
backend/app/agents/: quality_agent.py
backend/app/analyzers/: ast_analyzer.py  complexity_analyzer.py  duplication_analyzer.py  performance_analyzer.py  security_analyzer.py
backend/app/api/: auth.py
backend/app/auth/: github_auth.py  supabase_client.py
backend/app/models/: analysis.py
backend/app/utils/: code_parser.py  config.py  file_handler.py
backend/chroma_db/: chroma.sqlite3
backend/cli/: main.py
backend/data/chroma_db/: chroma.sqlite3
backend/quantum_code_inspector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
frontend/: .eslintrc.json  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AnalysisHistory.tsx  AuthCallback.tsx  FileUploader.tsx  InteractiveQA.tsx  ProtectedRoute.tsx  RepositoryAnalyzer.tsx  UserProfile.tsx
frontend/src/components/analysis/: ComplexityReport.tsx  IssuesTable.tsx  LanguageStats.tsx  PerformanceReport.tsx  QualityOverview.tsx  SecurityReport.tsx
frontend/src/components/ui/: Badge.tsx  LoadingSpinner.tsx  MarkdownRenderer.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: AnalysisPage.tsx  AuthCallbackPage.tsx  DashboardPage.tsx  HomePage.tsx
frontend/src/stores/: auth.ts
